--- a/App.Config
+++ b/App.Config
@@ -2,5 +2,8 @@
 <configuration>
   <connectionStrings>
     <add name="Bank2Entities" connectionString="metadata=res://*/Model.Baza.csdl|res://*/Model.Baza.ssdl|res://*/Model.Baza.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=.\sqlexpress;initial catalog=Bank2;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
+    <add name="Bank2Entities1" connectionString="metadata=res://*/Model.Model1.csdl|res://*/Model.Model1.ssdl|res://*/Model.Model1.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=.\sqlexpress;initial catalog=Bank2;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
+    <add name="Model1" connectionString="data source=.\sqlexpress;initial catalog=Bank2;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework" providerName="System.Data.SqlClient" />
+    <add name="Baza" connectionString="data source=.\sqlexpress;initial catalog=Bank2;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework" providerName="System.Data.SqlClient" />
   </connectionStrings>
 </configuration>
