Poprawione przelewy i dodanie klienta ustawia aktywny na true

--- a/App.Config
+++ b/App.Config
@@ -15,13 +15,11 @@
       providerName="System.Data.EntityClient" />
     <add name="SQLServer" connectionString="data source=.\sqlexpress;initial catalog=Bank;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework"
       providerName="System.Data.SqlClient" />
-    <add name="BazaPlik" connectionString="Data Source=(LocalDB)\MSSQLLocalDB;AttachDbFilename=C:\Users\Enkoff\Source\Repos\Artur-Paluch\Bank2\Model\PlikiBazy\Bank.mdf;Integrated Security=True;Connect Timeout=30"
-      providerName="" />
-    <add name="BazaPlik2" connectionString="Data Source=(LocalDB)\MSSQLLocalDB;AttachDbFilename=C:\Users\Enkoff\Source\Repos\Artur-Paluch\Bank2\Model\PlikiBazy\Bank.mdf;Integrated Security=True;Connect Timeout=30"
-      providerName="" />
-    <add name="Plik" connectionString="Data Source=(LocalDB)\MSSQLLocalDB;AttachDbFilename=|DataDirectory|\Bank.mdf; MultipleActiveResultSets=True"
+
+    <add name="Plik2" connectionString="Data Source=(LocalDB)\MSSQLLocalDB;AttachDbFilename=|DataDirectory|\Bank.mdf; MultipleActiveResultSets=True"
          providerName="System.Data.SqlClient"/>
- 
+    <add name="Plik" connectionString="Data Source=(LocalDB)\MSSQLLocalDB;AttachDbFilename=C:\Users\Enkoff\source\repos\Artur-Paluch\TestLogowanie\PlikiBazy\Bank.mdf;Integrated Security=True; MultipleActiveResultSets=True"
+           providerName="System.Data.SqlClient"/>
   
   </connectionStrings>
 </configuration>
