poprawa walidacji i bazy danych - logowanie (ignorowanie wielkości liter imie i nazwisko). Poprawa procedury logowania i błędu wyświetlania daty w view

--- a/App.Config
+++ b/App.Config
@@ -3,25 +3,14 @@
   <configSections>
   </configSections>
   <connectionStrings>
-    <add name="Model1" connectionString="data source=.\sqlexpress;initial catalog=Bank2;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework"
-      providerName="System.Data.SqlClient" />
-    <add name="Bank2Entities" connectionString="metadata=res://*/Model.Baza.csdl|res://*/Model.Baza.ssdl|res://*/Model.Baza.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=.\sqlexpress;initial catalog=Bank2;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework&quot;"
-      providerName="System.Data.EntityClient" />
-    <add name="Bank2Entities1" connectionString="metadata=res://*/Model.Model1.csdl|res://*/Model.Model1.ssdl|res://*/Model.Model1.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=.\sqlexpress;initial catalog=Bank2;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework&quot;"
-      providerName="System.Data.EntityClient" />
-    <add name="BankEntities" connectionString="metadata=res://*/Model.Baza.csdl|res://*/Model.Baza.ssdl|res://*/Model.Baza.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=.\sqlexpress;initial catalog=Bank;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework&quot;"
-      providerName="System.Data.EntityClient" />
-    <add name="BankEntities1" connectionString="metadata=res://*/Model.Model1.csdl|res://*/Model.Model1.ssdl|res://*/Model.Model1.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=.\sqlexpress;initial catalog=Bank;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework&quot;"
-      providerName="System.Data.EntityClient" />
-    <add name="SQLServer" connectionString="data source=.\sqlexpress;initial catalog=Bank;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework"
-      providerName="System.Data.SqlClient" />
-    <add name="BazaPlik" connectionString="Data Source=(LocalDB)\MSSQLLocalDB;AttachDbFilename=C:\Users\Enkoff\Source\Repos\Artur-Paluch\Bank2\Model\PlikiBazy\Bank.mdf;Integrated Security=True;Connect Timeout=30"
-      providerName="" />
-    <add name="BazaPlik2" connectionString="Data Source=(LocalDB)\MSSQLLocalDB;AttachDbFilename=C:\Users\Enkoff\Source\Repos\Artur-Paluch\Bank2\Model\PlikiBazy\Bank.mdf;Integrated Security=True;Connect Timeout=30"
-      providerName="" />
-    <add name="Plik" connectionString="Data Source=(LocalDB)\MSSQLLocalDB;AttachDbFilename=|DataDirectory|\Bank.mdf; MultipleActiveResultSets=True"
-         providerName="System.Data.SqlClient"/>
- 
   
+      
+ <add name="SQLServer" connectionString="data source=.\sqlexpress;initial catalog=Bank;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework;"
+        providerName="System.Data.SqlClient" /> 
+     <add name="Plik1" connectionString="Data Source=(LocalDB)\MSSQLLocalDB;AttachDbFilename=|DataDirectory|\Bank.mdf; MultipleActiveResultSets=True;"
+    providerName="System.Data.SqlClient" />
+
+    <add name="Plik"   connectionString="Data Source=(LocalDB)\MSSQLLocalDB;AttachDbFilename=|DataDirectory|\Model\PlikiBazy\Bank.mdf; MultipleActiveResultSets=True; "
+        providerName = "System.Data.SqlClient" />
   </connectionStrings>
 </configuration>
